tests/build/invalid/missing-buildconfig.kappa.build.kp
-- expect: E_CONFIG_EXPECTED_VALUE
-- §35.13: a build manifest must define exactly one 'let buildConfig : BuildConfig = ...'.
let other = semver "1.0.0"
